src/objects/ADvendio__TabItemDefinition__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Condition__c</fullName>
        <label>Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__DisabledButtons__c</fullName>
        <label>Disabled Buttons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__HiddenFields__c</fullName>
        <label>Hidden Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__ReadOnlyFields__c</fullName>
        <label>Read Only Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__RequiredFields__c</fullName>
        <label>Required Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__Types__c</fullName>
        <description>Describes for what types the tab will be shown.</description>
        <label>Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__allFieldsReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make all fields of the Campaign Item read-only</description>
        <inlineHelpText>Make all fields of the Campaign Item read-only</inlineHelpText>
        <label>All fields read-only</label>
        <type>Checkbox</type>
    </fields>
    <label>Tab Rule</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Condition__c</columns>
        <columns>ADvendio__Types__c</columns>
        <columns>ADvendio__HiddenFields__c</columns>
        <columns>ADvendio__ReadOnlyFields__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tab Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tab Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>